crates/splot-cli/tests/snapshots/inspect_text_snapshots__headers_conformant.snap
---
source: crates/splot-cli/tests/inspect_text_snapshots.rs
expression: "inspect_text(\"conformant.av2\", &[\"--headers\"])"
---
2 OBU(s)
OBU #0  @byte 1  size=1  type=OBU_TEMPORAL_DELIMITER(2)  ext=false  tlayer=0 mlayer=0 xlayer=31
OBU #1  @byte 3  size=11  type=OBU_SEQUENCE_HEADER(1)  ext=false  tlayer=0 mlayer=0 xlayer=0
