crates/splot-cli/tests/snapshots/inspect_text_snapshots__headers_metadata_group.snap
---
source: crates/splot-cli/tests/inspect_text_snapshots.rs
expression: "inspect_text(\"metadata-group.av2\", &[\"--headers\"])"
---
2 OBU(s)
OBU #0  @byte 1  size=1  type=OBU_TEMPORAL_DELIMITER(2)  ext=false  tlayer=0 mlayer=0 xlayer=31
OBU #1  @byte 3  size=14  type=OBU_METADATA_GROUP(9)  ext=true  tlayer=0 mlayer=0 xlayer=31
